--- a/static/css/base.css
+++ b/static/css/base.css
@@ -172,3 +172,71 @@ a{
 #all_rights{
     padding-bottom: 30px;
 }
+
+
+
+/* Adjust global font size and spacing for smaller screens */
+@media screen and (max-width: 768px) {
+    body {
+        font-size: 14px;
+    }
+
+    .nav_content {
+        font-size: 12px;
+        margin: 10px;
+    }
+
+    #signup_button {
+        width: 80px;
+        height: 30px;
+        font-size: 12px;
+    }
+
+    #social_media_content {
+        font-size: 12px;
+    }
+
+    .social_images {
+        width: 18px;
+        margin-right: 15px;
+    }
+
+    #footer_section {
+        margin-top: 30%;
+    }
+}
+
+
+
+@media screen and (max-width: 768px) {
+    .nav_content {
+        display: block;
+        margin: 5px auto;
+        text-align: center;
+    }
+}
+
+
+@media screen and (max-width: 480px) {
+    #social_media {
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .social_images {
+        margin: 5px;
+    }
+}
+
+
+
+@media screen and (max-width: 768px) {
+    #footer_section {
+        margin-top: 20%;
+        text-align: center;
+    }
+
+    .copyright_content {
+        font-size: 12px;
+    }
+}
