--- a/template/Base.html
+++ b/template/Base.html
@@ -22,7 +22,7 @@
                 <div id="home" class="nav_content"><a href="{% url 'myapp:home' %}">Home</a></div>
                 <div id="courses" class="nav_content"><a href="{% url 'myapp:courses' %}">Courses</a></div>
                 <div id="bootcamp" class="nav_content"><a href="{% url 'myapp:bootcamp' %}">Bootcamp(Kodr)</a></div>
-                <div id="request_callback" class="nav_content"><a onclick="requestCallback()">Request callback</a></div>
+                <div id="request_callback" class="nav_content">Request callback</div>
                 <button class="nav_content" id="signup_button">Sign In</button>
             </div>
         </div>
